index.css
@import url('./fonts/fonts.css');

.root,
.voters-form,
.user-form,
.voters-form__label,
.user-form__label {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0;
}

.title {
  margin: 100px 0 50px;
  font-size: 36px;
}

.voters-form__label,
.option {
  font-size: 20px;
  font-weight: 700;
}

.voters-form__input,
.user-form__input {
  display: block;
  margin: 20px 0;
}

.result {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  align-content: center;
  width: 450px;
  height: 250px;
  font-family: 'Arial Nova', sans-serif;
  font-size: 24px;
  letter-spacing: 1px;
  background-color: #010185;
  user-select: none;
}

.result__title {
  margin: 3px 0;
  text-align: center;
  color: #fdfcfa;
}

.result__list {
  list-style-type: none;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

.result__text {
  display: flex;
  justify-content: center;
  margin: 3px 10px;
  letter-spacing: 1px;
  color: #fdfcfa;
}

.result__text_type_vote-type {
  margin-bottom: 0;
}

.result__text_type_parliament {
  margin-top: 0;
  line-height: 10px;
}

.result__text_type_graph {
  font-size: 20px;
}

.result__text_type_graph::after {
  content: "";
  flex-grow: 1;
  order: 2;
  height: 1em;
  margin: 0 5px;
  background-image: radial-gradient(circle, currentcolor 1px, transparent 1.5px);
  background-position: bottom;
  background-size: 1ex 4.5px;
  background-repeat: space no-repeat;
}

.result__label {
  order: 1;
}

.result__in-favor,
.result__against,
.result__halt,
.result__voted {
  order: 3;
  margin-right: 5px;
}

.result__in-favor-prc,
.result__against-prc,
.result__halt-prc,
.result__voted-prc {
  display: inline-block;
  order: 4;
  width: 60px;
  text-align: end;
}

.result__text_type_decision {
  text-transform: uppercase;
}

.sorry {
  display: none;
  margin: 20px;
  font-size: 26px;
}

@media screen and (max-width: 460px) {
  .title,
  .voters-form,
  .option,
  .user-form,
  .result-topic,
  .result {
    display: none;
  }

  .sorry {
    display: block;
  }
}

